Chapter Five (Access Control)/exercisefour/sources/ReadMe.txt
Compile these two files by:
javac -cp ../ -d ../classes *.java
And an error message should appear saying:

ExerciseFour.java:8: error: methodProtected() has protected access in A
		a.methodProtected();
		 ^
1 error

